examples/flutter/flutter_skyle/native/link/flutter_skyle_link_glue.h

// =============================================================================
// Glue installation + automatic transport supervisor
// =============================================================================

/**
 * Install the glue's event adapters (idempotent, call once at client/context
 * creation - the Android bridge does it in get_or_create_context, Dart does
 * it right after obtaining the client pointer on the other platforms):
 *  - skyle_link_set_supervisor_event_callback: SUSPEND_CHANGED hub events
 *    while the supervisor is OWNER feed the suspension cache (other events
 *    are logged only)
 *  - skyle_link_set_suspend_callback on `client`: the CLIENT-mode suspension
 *    adapter (client-level setter, independent of any connect)
 *  - skyle_link_set_mode_callback: resets a stale cached suspension lease
 *    when the supervisor leaves a serving mode (OWNER/CLIENT)
 * The notice/closed client callbacks are deliberately NOT touched: skylelib
 * logs them itself and the single-slot registrations stay free for the
 * supervisor's own wiring.
 */
FLUTTER_SKYLE_LINK_EXPORT void flutter_skyle_link_glue_install(skyle_client* client);
/**
 * Identity used in HELLO / the hub config (re-export of
 * skyle_link_set_identity). May be called before or after client creation and
 * repeatedly - usb_capable flips when the platform USB permission changes.
 */
FLUTTER_SKYLE_LINK_EXPORT void flutter_skyle_set_identity(const char* app_id, uint8_t tier, bool usb_capable);
/**
 * Enable/disable the automatic transport supervisor (re-export of
 * skyle_link_set_supervisor_enabled). Enabling returns immediately; disabling
 * is a deliberate stop (OWNER sends BYE(handover) + releases USB, CLIENT
 * closes; no re-election until re-enabled).
 */
FLUTTER_SKYLE_LINK_EXPORT void flutter_skyle_set_supervisor_enabled(bool enabled);
/**
 * Current supervisor mode as int (skyle_link_supervisor_mode: 0 disabled,
 * 1 deciding, 2 owner, 3 client, 4 usb fallback).
 */
FLUTTER_SKYLE_LINK_EXPORT int flutter_skyle_get_supervisor_mode(void);
// =============================================================================
// Suspension (the only Skyle Link event surface above C)
// =============================================================================

/**
 * Request or release eye-control suspension (client mode only).
 * Returns skyle_result as int.
 */
FLUTTER_SKYLE_LINK_EXPORT int flutter_skyle_link_set_suspended(skyle_client* client, bool suspended);
/**
 * Read the cached suspension state (for Dart stream seeding). `holder_buf`
 * receives the holder app id as a NUL-terminated string (empty when not
 * suspended); pass at least SKYLE_LINK_MAX_APP_ID + 1 bytes.
 */
FLUTTER_SKYLE_LINK_EXPORT void flutter_skyle_get_suspension_state(bool* suspended, char* holder_buf, size_t buf_len);