examples/flutter/flutter_skyle/native/fanout/flutter_skyle_fanout.h

// =============================================================================
// Callback Registration Structure
// =============================================================================

/**
 * Structure holding all Dart callback function pointers for one subscriber.
 */
typedef struct {
    dart_gaze_callback on_gaze;
    dart_positioning_callback on_positioning;
    dart_version_callback on_version;
    dart_control_callback on_control;
    dart_calibration_point_callback on_calibration_point;
    dart_calibration_progress_callback on_calibration_progress;
    dart_calibration_paused_callback on_calibration_paused;
    dart_calibration_finished_callback on_calibration_finished;
    dart_video_callback on_video;
    dart_file_status_callback on_file_status;
    dart_logging_callback on_logging;
    dart_state_callback on_state_change;
    dart_error_callback on_error;
    void* user_data;  // Passed back to all callbacks
    // Appended fields ONLY below this line: the layout above is ABI shared
    // with Dart (FlutterSkyleCallbacks in skyle_client_bindings.dart) and the
    // darwin bridge's iOS branch - all definitions must stay field-identical.
    dart_suspend_state_callback on_suspend_state;  // Skyle Link suspension fan-out
} flutter_skyle_callbacks;
// =============================================================================
// Dart-facing exports (declared here, DEFINED by each fan-out bridge as thin
// wrappers over the flutter_skyle_fanout_* functions below - the bridges keep
// their own context bookkeeping around the delegation)
// =============================================================================

/**
 * Register an ADDITIONAL callback subscriber (multi-engine fan-out).
 * Each subscriber receives every callback for which it registered a non-NULL
 * function pointer. Heap payloads (video frames, log / file-status strings,
 * suspend holder ids) are allocated per subscriber; each Dart side frees its
 * own copy with flutter_skyle_free(). Calibration-result arrays are deep-copied
 * per subscriber slot and stay bridge-owned (freed on next dispatch or
 * removal), matching the existing Dart no-free semantics.
 * Installs the C adapters on the core client if not yet installed.
 *
 * @return handle > 0 on success; -1 on invalid args; -2 when the table is full.
 */
FLUTTER_SKYLE_FANOUT_EXPORT int64_t flutter_skyle_add_callbacks(skyle_client* client, const flutter_skyle_callbacks* callbacks);
/**
 * flutter_skyle_add_callbacks with an engine token for stale-subscriber reaping
 * (desktop). On platforms without host-side bookkeeping (no Kotlin plugin to
 * reap a hot-restarted engine's dead subscriber), the caller passes a stable
 * per-engine token (Dart: PlatformDispatcher.instance.engineId - it identifies
 * the ENGINE, not the isolate, so it survives a hot restart): a re-add with
 * the same non-zero token atomically replaces (reaps) the previous subscriber
 * carrying that token before adding. engine_token == 0 means "no token" and
 * behaves exactly like flutter_skyle_add_callbacks (no reaping - Android keeps
 * its Kotlin reportSubscriberHandle mechanism instead).
 *
 * @return handle > 0 on success; -1 on invalid args; -2 when the table is full.
 */
FLUTTER_SKYLE_FANOUT_EXPORT int64_t flutter_skyle_add_callbacks_engine(skyle_client* client, const flutter_skyle_callbacks* callbacks, int64_t engine_token);
/**
 * Remove one callback subscriber. Idempotent: unknown or stale handles return
 * -1 and do nothing. After return (synchronized with dispatch via the module
 * mutex) the subscriber's function pointers can no longer be invoked - the safe
 * point for the owner to close its NativeCallables.
 * Does NOT unregister the C adapters from the core client, even when the table
 * empties - other engines may subscribe later.
 *
 * @return 0 on success, -1 if the handle was not found.
 */
FLUTTER_SKYLE_FANOUT_EXPORT int flutter_skyle_remove_callbacks(skyle_client* client, int64_t handle);