examples/flutter/flutter_skyle/lib/src/ffi/skyle_client_bindings.dart


  late final FlutterSkyleIsInitialized isInitialized;
  late final FlutterSkyleGetInstance getInstance;
  late final FlutterSkyleSetCallbacks setCallbacks;
  late final FlutterSkyleClearCallbacks clearCallbacks;
  late final FlutterSkyleDestroy destroy;
  late final FlutterSkyleConnect connect;
  late final FlutterSkyleDisconnect disconnect;
  late final FlutterSkyleEnableStream enableGaze;
  late final FlutterSkyleEnableStream enablePositioning;
  late final FlutterSkyleRequestVersion requestVersion;
  late final FlutterSkyleEnableStream enableControl;
  late final FlutterSkyleSendControl sendControl;
  late final FlutterSkyleSendDisplayInfo sendDisplayInfo;
  late final FlutterSkyleStartCalibration startCalibration;
  late final FlutterSkyleCollectCalibrationPoints collectCalibrationPoints;
  late final FlutterSkyleAbortCalibration abortCalibration;
  late final FlutterSkyleEnableStream enableVideo;
  late final FlutterSkyleEnableStream enableLogging;
  late final FlutterSkyleUploadFile uploadFile;
  late final FlutterSkyleCancelUpload cancelUpload;
  // feedUsbData, getPendingWrite, clearPendingWrite REMOVED
  late final FlutterSkyleGetState getState;
  late final FlutterSkyleGetLastError getLastError;

  /// Multi-engine callback fan-out (all pull-mode platform bridges export
  /// these; null on iOS and against older single-slot desktop binaries).
  late final FlutterSkyleAddCallbacks? addCallbacks;
  late final FlutterSkyleAddCallbacksEngine? addCallbacksEngine;
  late final FlutterSkyleRemoveCallbacks? removeCallbacks;
  late final FlutterSkyleFree? nativeFree;

  /// Skyle Link symbols (shared link glue, all platforms). Null when the
  /// loaded shim predates Skyle Link support.
  late final FlutterSkyleLinkGlueInstall? linkGlueInstall;
  late final FlutterSkyleSetIdentity? setLinkIdentity;
  late final FlutterSkyleSetSupervisorEnabled? setSupervisorEnabled;
  late final FlutterSkyleGetSupervisorMode? getSupervisorMode;
  late final FlutterSkyleLinkSetSuspended? linkSetSuspended;
  late final FlutterSkyleGetSuspensionState? getSuspensionState;

  /// Native function pointer for flutter_skyle_free, suitable for
  /// [NativeFinalizer] / [Pointer.asTypedList] finalizer parameter.
  late final Pointer<NativeFinalizerFunction>? nativeFreeFinalizer;

  SkyleClientBindings(this._dylib) {
    isInitialized = _dylib.lookup<NativeFunction<FlutterSkyleIsInitializedNative>>('flutter_skyle_is_initialized').asFunction();

    getInstance = _dylib.lookup<NativeFunction<FlutterSkyleGetInstanceNative>>('flutter_skyle_get_instance').asFunction();

    setCallbacks = _dylib.lookup<NativeFunction<FlutterSkyleSetCallbacksNative>>('flutter_skyle_set_callbacks').asFunction();

    clearCallbacks = _dylib.lookup<NativeFunction<FlutterSkyleClearCallbacksNative>>('flutter_skyle_clear_callbacks').asFunction();

    destroy = _dylib.lookup<NativeFunction<FlutterSkyleDestroyNative>>('flutter_skyle_destroy').asFunction();

    connect = _dylib.lookup<NativeFunction<FlutterSkyleConnectNative>>('flutter_skyle_connect').asFunction();

    disconnect = _dylib.lookup<NativeFunction<FlutterSkyleDisconnectNative>>('flutter_skyle_disconnect').asFunction();

    enableGaze = _dylib.lookup<NativeFunction<FlutterSkyleEnableStreamNative>>('flutter_skyle_enable_gaze').asFunction();

    enablePositioning = _dylib.lookup<NativeFunction<FlutterSkyleEnableStreamNative>>('flutter_skyle_enable_positioning').asFunction();

    requestVersion = _dylib.lookup<NativeFunction<FlutterSkyleRequestVersionNative>>('flutter_skyle_request_version').asFunction();

    enableControl = _dylib.lookup<NativeFunction<FlutterSkyleEnableStreamNative>>('flutter_skyle_enable_control').asFunction();

    sendControl = _dylib.lookup<NativeFunction<FlutterSkyleSendControlNative>>('flutter_skyle_send_control').asFunction();

    sendDisplayInfo = _dylib.lookup<NativeFunction<FlutterSkyleSendDisplayInfoNative>>('flutter_skyle_send_display_info').asFunction();

    startCalibration = _dylib.lookup<NativeFunction<FlutterSkyleStartCalibrationNative>>('flutter_skyle_start_calibration').asFunction();

    collectCalibrationPoints = _dylib.lookup<NativeFunction<FlutterSkyleCollectCalibrationPointsNative>>('flutter_skyle_collect_calibration_points').asFunction();

    abortCalibration = _dylib.lookup<NativeFunction<FlutterSkyleAbortCalibrationNative>>('flutter_skyle_abort_calibration').asFunction();

    enableVideo = _dylib.lookup<NativeFunction<FlutterSkyleEnableStreamNative>>('flutter_skyle_enable_video').asFunction();

    enableLogging = _dylib.lookup<NativeFunction<FlutterSkyleEnableStreamNative>>('flutter_skyle_enable_logging').asFunction();

    uploadFile = _dylib.lookup<NativeFunction<FlutterSkyleUploadFileNative>>('flutter_skyle_upload_file').asFunction();

    cancelUpload = _dylib.lookup<NativeFunction<FlutterSkyleCancelUploadNative>>('flutter_skyle_cancel_upload').asFunction();

    // feedUsbData, getPendingWrite, clearPendingWrite lookups REMOVED

    getState = _dylib.lookup<NativeFunction<FlutterSkyleGetStateNative>>('flutter_skyle_get_state').asFunction();

    getLastError = _dylib.lookup<NativeFunction<FlutterSkyleGetLastErrorNative>>('flutter_skyle_get_last_error').asFunction();

    // Free memory allocated by the C bridge. Exported on all platforms so that
    // Dart can attach a NativeFinalizer for zero-copy video frame ownership.
    // On Windows this is critical (CRT free != CoTaskMemFree); on other
    // platforms it wraps the standard free().
    try {
      nativeFree = _dylib.lookup<NativeFunction<FlutterSkyleFreeNative>>('flutter_skyle_free').asFunction();
      nativeFreeFinalizer = _dylib.lookup<NativeFinalizerFunction>('flutter_skyle_free');
    } catch (_) {
      nativeFree = null;
      nativeFreeFinalizer = null;
    }

    // Multi-engine fan-out symbols (all pull-mode platform bridges; absent on
    // iOS and in older single-slot desktop binaries).
    try {
      addCallbacks = _dylib.lookup<NativeFunction<FlutterSkyleAddCallbacksNative>>('flutter_skyle_add_callbacks').asFunction();
      removeCallbacks = _dylib.lookup<NativeFunction<FlutterSkyleRemoveCallbacksNative>>('flutter_skyle_remove_callbacks').asFunction();
    } catch (_) {
      addCallbacks = null;
      removeCallbacks = null;
    }

    // Engine-token add (separate try block: an intermediate Android binary
    // exports the plain add but predates the engine variant).
    try {
      addCallbacksEngine = _dylib.lookup<NativeFunction<FlutterSkyleAddCallbacksEngineNative>>('flutter_skyle_add_callbacks_engine').asFunction();
    } catch (_) {
      addCallbacksEngine = null;
    }

    // Skyle Link glue symbols - ship in every current platform shim, but stay
    // nullable so the Dart layer degrades gracefully against an older binary
    // (all Skyle Link features then report unavailable instead of crashing).
    try {
      linkGlueInstall = _dylib.lookup<NativeFunction<FlutterSkyleLinkGlueInstallNative>>('flutter_skyle_link_glue_install').asFunction();
      setLinkIdentity = _dylib.lookup<NativeFunction<FlutterSkyleSetIdentityNative>>('flutter_skyle_set_identity').asFunction();
      setSupervisorEnabled = _dylib.lookup<NativeFunction<FlutterSkyleSetSupervisorEnabledNative>>('flutter_skyle_set_supervisor_enabled').asFunction();
      getSupervisorMode = _dylib.lookup<NativeFunction<FlutterSkyleGetSupervisorModeNative>>('flutter_skyle_get_supervisor_mode').asFunction();
      linkSetSuspended = _dylib.lookup<NativeFunction<FlutterSkyleLinkSetSuspendedNative>>('flutter_skyle_link_set_suspended').asFunction();
      getSuspensionState = _dylib.lookup<NativeFunction<FlutterSkyleGetSuspensionStateNative>>('flutter_skyle_get_suspension_state').asFunction();
    } catch (_) {
      linkGlueInstall = null;
      setLinkIdentity = null;
      setSupervisorEnabled = null;
      getSupervisorMode = null;
      linkSetSuspended = null;
      getSuspensionState = null;
    }
  }
}
